Fix menu wrap with "People" option
Former-commit-id: 3f4c7702aaa461595b0a6ac3d9073c4a542e38d2

--- a/theme/2014/static/scss/menu.scss
+++ b/theme/2014/static/scss/menu.scss
@@ -217,7 +217,7 @@ $white: rgba(255, 255, 255, 1);
   }
 }
 
-@media (min-width: 900px) {
+@media (min-width: 970px) {
   .intro-header {
     padding-top: 0;
   }
